--- a/.gitignore
+++ b/.gitignore
@@ -145,4 +145,6 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+application.properties
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,gradle,java
